syntax = "proto3";

package grpc_parameter;

option go_package = "github.com/YujiYabe/go-docker-template/backend/internal/1_framework/in/grpc_parameter";

service Person {
    rpc GetPersonByCondition (V1PersonParameter) returns (V1GetPersonByConditionResponse);
}

message V1CommonParameter {
    string XTraceID = 1;
    string timestamp = 2;  
}

message V1GetPersonByConditionResponse {
    V1CommonParameter v1CommonParameter = 1; // V1CommonParameter
    V1PersonParameterArray v1PersonParameterArray = 2; // V1PersonParameterArray
}


message V1PersonParameter {
    optional uint32 id = 2;           // ID
    optional string name = 3;         // Name
    optional string mail_address = 4; // Mail Address
}

message V1PersonParameterArray {
    repeated V1PersonParameter persons = 2;  // Array of V1PersonParameter
}
