syntax = "proto3";

package grpc_parameter.v1;

option go_package = "internal/grpc";

message V1CommonParameter {
  optional V1Error v1_error = 1;
  V1RequestContext v1_request_context = 2;
}

message V1Error {
  string code = 1;
  string message = 2;
  string detail = 3;
  string field = 4;
  repeated V1Error errors = 5;
}

message V1RequestContext {
  string trace_id = 1;
  int64 request_start_time = 2;
  string client_ip = 3;
  string user_agent = 4;
  string user_id = 5;
  repeated string permissions = 6;
  string access_token = 7;
  string tenant_id = 8;
  string locale = 9;
  string time_zone = 10;
}
